--- a/public/index.html
+++ b/public/index.html
@@ -221,18 +221,18 @@
               alt="M3T4 | The only known inhabitants of the MetaMoon"
               class="img_square_cover"
             />
-            <button class="link_block_button w-inline-block no_cursor">
-              <!--
+            <button class="link_block_button w-inline-block">
+             
             <a
               href="https://rocketlaunch-m3.ml"
               target="_blank"
               class="link_block_button w-inline-block"
-            > -->
+            > 
               <div class="intro_button_text">M3T4 • FREE MINT</div>
               <div class="intro_button_note">
                 (Page will open in a new tab for safety purposes.)
               </div>
-              <!-- </a> -->
+              </a> 
             </button>
           </div>
         </div>
