--- a/public/index.html
+++ b/public/index.html
@@ -211,28 +211,27 @@
             class="div_mint_2"
           >
             <img
-              src="%PUBLIC_URL%/images/MMM_M3T4.gif"
+              src="%PUBLIC_URL%/images/MMM_M3T4_SOLDOUT.gif"
               sizes="(max-width: 767px) 220px, (max-width: 991px) 300px, 400px"
               srcset="
-                %PUBLIC_URL%/images/MMM_M3T4.gif  500w,
-                %PUBLIC_URL%/images/MMM_M3T4.gif  800w,
-                %PUBLIC_URL%/images/MMM_M3T4.gif 1024w
+                %PUBLIC_URL%/images/MMM_M3T4_SOLDOUT.gif  500w,
+                %PUBLIC_URL%/images/MMM_M3T4_SOLDOUT.gif  800w,
+                %PUBLIC_URL%/images/MMM_M3T4_SOLDOUT.gif 1024w
               "
               alt="M3T4 | The only known inhabitants of the MetaMoon"
               class="img_square_cover"
             />
             <button class="link_block_button w-inline-block">
-             
-            <a
-              href="https://rocketlaunch-m3.ml"
-              target="_blank"
-              class="link_block_button w-inline-block"
-            > 
-              <div class="intro_button_text">M3T4 • FREE MINT</div>
-              <div class="intro_button_note">
-                (Page will open in a new tab for safety purposes.)
-              </div>
-              </a> 
+              <a
+                href="https://rocketlaunch-m3.ml"
+                target="_blank"
+                class="link_block_button w-inline-block"
+              >
+                <div class="intro_button_text">M3T4 • FREE MINT</div>
+                <div class="intro_button_note">
+                  (Page will open in a new tab for safety purposes.)
+                </div>
+              </a>
             </button>
           </div>
         </div>
@@ -262,13 +261,13 @@
             target="_blank"
             class="div_link_center w-inline-block"
             ><img
-              src="%PUBLIC_URL%/images/MMM_MoonCoin.gif"
+              src="%PUBLIC_URL%/images/MMM_MoonCoin_SOLDOUT.gif"
               loading="lazy"
               sizes="(max-width: 767px) 200px, (max-width: 991px) 150px, 160px"
               srcset="
-                %PUBLIC_URL%/images/MMM_MoonCoin.gif  500w,
-                %PUBLIC_URL%/images/MMM_MoonCoin.gif  800w,
-                %PUBLIC_URL%/images/MMM_MoonCoin.gif 1024w
+                %PUBLIC_URL%/images/MMM_MoonCoin_SOLDOUT.gif  500w,
+                %PUBLIC_URL%/images/MMM_MoonCoin_SOLDOUT.gif  800w,
+                %PUBLIC_URL%/images/MMM_MoonCoin_SOLDOUT.gif 1024w
               "
               alt="MoonCoin | MetaMoonMission VIP token"
               class="img_crew_member"
@@ -375,7 +374,7 @@
     <!-- ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░ MMM PARTICLES START ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░ -->
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script type="text/javascript">
-      particlesJS('particles-js', {
+      particlesJS("particles-js", {
         particles: {
           number: {
             value: 80,
@@ -385,19 +384,19 @@
             },
           },
           color: {
-            value: '#0A4D84',
+            value: "#0A4D84",
           },
           shape: {
-            type: 'circle',
+            type: "circle",
             stroke: {
               width: 0,
-              color: '#000000',
+              color: "#000000",
             },
             polygon: {
               nb_sides: 5,
             },
             image: {
-              src: 'img/github.svg',
+              src: "img/github.svg",
               width: 100,
               height: 100,
             },
@@ -425,17 +424,17 @@
           line_linked: {
             enable: true,
             distance: 150,
-            color: '#0A4D84',
+            color: "#0A4D84",
             opacity: 0.4,
             width: 1,
           },
           move: {
             enable: true,
             speed: 6,
-            direction: 'none',
+            direction: "none",
             random: false,
             straight: false,
-            out_mode: 'out',
+            out_mode: "out",
             bounce: false,
             attract: {
               enable: false,
@@ -445,15 +444,15 @@
           },
         },
         interactivity: {
-          detect_on: 'canvas',
+          detect_on: "canvas",
           events: {
             onhover: {
               enable: true,
-              mode: 'repulse',
+              mode: "repulse",
             },
             onclick: {
               enable: true,
-              mode: 'push',
+              mode: "push",
             },
             resize: true,
           },
